[package]
name = "confidential-data-hub"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttrpc-cdh"
required-features = ["bin", "ttrpc"]

[[bin]]
name = "grpc-cdh"
required-features = ["bin", "grpc"]

[[bin]]
name = "ttrpc-cdh-tool"
required-features = ["bin", "ttrpc"]

[[bin]]
name = "grpc-cdh-tool"
required-features = ["bin", "grpc"]

[[bin]]
name = "cdh-oneshot"
required-features = ["bin"]

[[bin]]
name = "secret"
path = "src/bin/secret_cli.rs"
required-features = ["cli"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait.workspace = true
attestation-agent = { path = "../../attestation-agent/attestation-agent", default-features = false }
base64.workspace = true
bincode = { workspace = true, optional = true }
cfg-if = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
config = { workspace = true, optional = true }
const_format.workspace = true
crypto.path = "../../attestation-agent/deps/crypto"
ehsm_client = { git = "https://github.com/intel/ehsm", rev = "3454cac66b968a593c3edc43410c0b52416bbd3e", optional = true }
env_logger = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
image-rs = { path = "../../image-rs", default-features = false, features = [
    "kata-cc-rustls-tls",
] }
kbs_protocol = { path = "../../attestation-agent/kbs_protocol", default-features = false, features = [
    "passport",
    "aa_ttrpc",
    "openssl",
], optional = true }
log.workspace = true
p12 = { version = "0.6.3", optional = true }
prost = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }
rand.workspace = true
reqwest = { workspace = true, optional = true }
resource_uri.path = "../../attestation-agent/deps/resource_uri"
ring = "0.17"
serde = { workspace = true, optional = true }
serde_json.workspace = true
sev = { path = "../../attestation-agent/deps/sev", optional = true }
sha2 = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "io-util",
    "process",
    "rt-multi-thread",
    "sync",
] }
toml.workspace = true
tonic = { workspace = true, optional = true }
ttrpc = { workspace = true, features = ["async"], optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4"], optional = true }
yasna = { version = "0.5.2", optional = true }
zeroize.workspace = true

[build-dependencies]
anyhow.workspace = true
tonic-build.workspace = true
ttrpc-codegen = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd.workspace = true
assert-json-diff.workspace = true
nix.workspace = true
rstest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = ["aliyun", "kbs", "bin", "ttrpc", "grpc", "cli"]

# support aliyun stacks (KMS, ..)
aliyun = [
    "anyhow",
    "chrono",
    "hex",
    "p12",
    "prost",
    "reqwest/rustls-tls",
    "sha2",
    "serde",
    "tempfile",
    "tonic",
    "url",
    "yasna",
]

# support coco-KBS to provide confidential resources
kbs = ["kbs_protocol"]

# support sev to provide confidential resources
sev = ["bincode", "dep:sev", "prost", "tonic", "uuid"]

# support eHSM stacks (KMS, ...)
ehsm = ["ehsm_client"]

# Binary RPC type
bin = ["anyhow", "cfg-if", "clap", "config", "env_logger", "serde"]
ttrpc = ["dep:ttrpc", "protobuf", "ttrpc-codegen", "tokio/signal"]
grpc = ["prost", "tonic", "tokio/signal"]

# for secret_cli
cli = ["clap/derive", "tokio/rt-multi-thread", "tokio/sync", "tokio/macros"]
