[package]
name = "confidential-data-hub"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttrpc-cdh"
required-features = ["bin", "ttrpc"]

[[bin]]
name = "grpc-cdh"
required-features = ["bin", "grpc"]

[[bin]]
name = "ttrpc-cdh-tool"
required-features = ["bin", "ttrpc"]

[[bin]]
name = "grpc-cdh-tool"
required-features = ["bin", "grpc"]

[[bin]]
name = "cdh-oneshot"
required-features = ["bin"]

[[bin]]
name = "guest-services"
required-features = ["bin", "ttrpc"]

[[bin]]
name = "secret"
path = "src/bin/secret_cli.rs"
required-features = ["cli"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attestation-agent = { path = "../../attestation-agent/attestation-agent", default-features = false }
base64.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
config = { workspace = true }
crypto.path = "../../attestation-agent/deps/crypto"
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
image-rs = { path = "../../image-rs", default-features = false, features = [
    "kata-cc-rustls-tls",
] }
jose-b64 = "0.1.2"
jose-jwa = "0.1.2"
jose-jwk = "0.1.2"
jose-jws = "0.1.2"
kms = { path = "../kms", default-features = false }
libcryptsetup-rs = { version = "0.13.1", optional = true, features = ["mutex"] }
nix.workspace = true
p256 = "0.13.2"
prost = { workspace = true, optional = true }
protos = { path = "../../protos", default-features = false, optional = true }
rand.workspace = true
resource_uri.path = "../../attestation-agent/deps/resource_uri"
serde.workspace = true
serde_json.workspace = true
shadow-rs = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "io-util",
    "process",
    "rt-multi-thread",
    "sync",
] }
tonic = { workspace = true, optional = true }
ttrpc = { workspace = true, features = ["async"], optional = true }
uuid = { workspace = true, features = ["fast-rng", "v4"] }
zeroize.workspace = true

[build-dependencies]
anyhow.workspace = true
shadow-rs.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert-json-diff.workspace = true
nix.workspace = true
rstest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = ["aliyun", "kbs", "bin", "ttrpc", "grpc", "cli"]

# support aliyun stacks (KMS, ..)
aliyun = ["tempfile", "kms/aliyun"]

# support coco-KBS to provide confidential resources
kbs = ["kms/kbs"]

# support sev to provide confidential resources
sev = ["kms/sev"]

# support eHSM stacks (KMS, ...)
ehsm = []

# support luks2 encrypted block device storage enabled by cryptsetup.
# It requires to install dependency `libcryptsetup-dev` for ubuntu.
luks2 = ["libcryptsetup-rs"]

# Binary RPC type
bin = ["clap", "shadow-rs", "tracing-subscriber"]
ttrpc = ["dep:ttrpc", "tokio/signal", "protos/ttrpc"]
grpc = ["prost", "tonic", "tokio/signal", "protos/grpc"]

# for secret_cli
cli = ["clap/derive", "tokio/rt-multi-thread", "tokio/sync", "tokio/macros"]
