[package]
name = "secret"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "secret_cli"
features = [ "cli" ]

[dependencies]
async-trait.workspace = true
base64.workspace = true
clap = { workspace = true, optional = true }
crypto.path = "../../attestation-agent/deps/crypto"
kms.path = "../kms"
rand = { workspace = true, optional = true }
serde = "1"
serde_json = "1"
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
zeroize.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true

[features]
default = [ "cli" ]
cli = ["clap/derive", "rand", "tokio/rt-multi-thread"]
