[package]
name = "confidential-datahub"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
base64.workspace = true
clap = { workspace = true, features = [ "derive" ] }
log.workspace = true
secret.path = "../secret"
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
