[package]
name = "secret"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
crypto.path = "../../attestation-agent/deps/crypto"
serde = "1"
serde_json = "1"
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true
